--- a/.nais/dev/dev-gcp.yaml
+++ b/.nais/dev/dev-gcp.yaml
@@ -32,20 +32,18 @@ spec:
       cpu: 5m
       memory: 256Mi
   ingresses:
-  {{#each ingress}}
-     - "{{this}}"
-  {{/each}}
+    - "https://sosialhjelp-soknad-api-db-migration.dev.intern.nav.no"
   azure:
     application:
       enabled: true
   tokenx:
     enabled: true
   accessPolicy:
-    inbound:
-      rules:
-        []
+    outbound:
+      external:
+        - host: "sosialhjelp-soknad-api.dev-fss-pub.nais.io"
   env:
-  {{#each env}}
-    - name: {{@key}}
-      value: "{{this}}"
-  {{/each}}
+    - name: SPRING_PROFILES_ACTIVE
+      value: "log-kibana"
+    - name: SOKNAD_API_MIGRATION_API_URL
+      value: "https://sosialhjelp-soknad-api.dev-fss-pub.nais.io/sosialhjelp/soknad-api/internal/migration"
