--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,3 +18,5 @@ management:
       base-path: "/internal"
       exposure:
         include: info, health, metrics, prometheus
+
+soknad_api_migration_api_url: ${SOKNAD_API_MIGRATION_API_URL}
