--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -20,7 +20,7 @@ jobs:
         uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          RESOURCE: nais/dev/dev-fss.yaml
+          RESOURCE: .nais/dev/dev-fss.yaml
           CLUSTER: dev-fss
           REF: ${{ github.sha }}
           PRINT_PAYLOAD: true
