--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -27,7 +27,7 @@ jobs:
         uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          RESOURCE: nais/prod/prod-fss.yaml
+          RESOURCE: .nais/prod/prod-fss.yaml
           CLUSTER: prod-fss
           REF: ${{ github.sha }}
           PRINT_PAYLOAD: true
