--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -9,3 +9,6 @@ spring:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
     username: username
     password: password
+
+#endepunkt
+soknad_api_migration_api_url: http://localhost:8080/test
