--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -3,7 +3,7 @@ name: Code Analysis and Dependency Submission
 on:
   push:
     branches:
-      - master
+      - main
   schedule: ## Kjører kl. 05:00 mandag -> fredag (schedule kjører bare for Default branch)
     - cron: '0 5 * * 1-5'
 
