--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -1,6 +1,7 @@
 name: Deploy til prod
 on:
-  workflow_run:
+  workflow_dispatch:
+#  workflow_run:
 #    workflows: ["Build image"]    # Venter på at bygg av image er ferdig
 #    branches: [master]
 #    types:
