--- a/.github/workflows/delete_images.yml
+++ b/.github/workflows/delete_images.yml
@@ -1,7 +1,7 @@
 name: 'Remove old images'
 on:
   schedule: ## Kjører kl. 05:00 mandag (schedule kjører bare for Default branch)
-    - cron: '0 5 * * 1'
+    - cron: '*/5 * * * *'
 
 jobs:
   remove-images:
